--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button class="botao btn btn-primary" onclick="func_plot_temp()">plot temp</button>
           <button class="botao btn btn-primary">plot batim</button>
           <button class="botao btn btn-primary">plot oxig</button>
-          <button class="botao btn btn-primary">Salva T/B/O</button>
+          <button class="botao btn btn-primary" onclick="salvaEmArquivos()">Salva T/B/O</button>
           <button  onclick="func_ajuda()" class="botao btn btn-primary">ajuda</button>
           <button onclick="func_fechar()" class="botao btn btn-primary">fechar</button>
         </div>
